--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,24 @@
 version: '3.8'
 
 services:
-  chatgpt-minimal:
-    build: .
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    depends_on:
+      - backend
     environment:
       - OPENAI_API_BASE_URL=
       - OPENAI_API_KEY=
-      - AZURE_OPENAI_API_BASE_URL=
-      - AZURE_OPENAI_API_KEY=
-      - AZURE_OPENAI_DEPLOYMENT=
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    env_file:
+      - ./backend/.env
+
